--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "primera entrega de proyecto final para el curso de backend de  coderhouse",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "Alessandro Chiavarino",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
